fix overlaps in display at footer and header

--- a/farmers-app/src/styles.css
+++ b/farmers-app/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     padding-top: 5.5rem;
+    padding-bottom: 4.5rem;
     height: 100%;
-    margin: 0;
 }
